[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Yet Siaw Yeung <Yet.Siaw.Yeung@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bytecount]
version="0.6.0"
features=["runtime-dispatch-simd"]
